# py-wordfinder

./: README.md  pyproject.toml  requirements.txt  wordfinder.py
src/frontend/: package-lock 2.json  package-lock.json  package.json
src/frontend/src/: App.js  InputForm.js  LetterTiles.js  Results.js  styles.js  utils.js
src/wordfinder/: __init__.py  api.py  cli.py  wordfinder.py
