[tool.poetry]
name = "py-wordfinder"
version = "0.0.1"
description = "A simple CLI application for word filtering"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"