[project]
name = "py-wordfinder"
version = "0.1.0"
description = "A simple CLI application for word filtering"
authors = [
    {name = "DeChinees",email = "justanotheraddress@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.13"
dependencies = ["fastapi[standard] (>=0.115.8,<0.116.0)", "Starlette", "pydantic", "fastapi_sessions", "uvicorn (>=0.34.0,<0.35.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
 from = "src"
 include = "wordfinder"